# Music-Maker

./: .gitignore  CMakeLists.txt  README.md
docs/: index.norg
docs/examples/: main.cc
src/: main.cpp
